# src/controllers/measures/measuresController.js
@@ -3,7 +3,6 @@ import fs from 'fs';
 import _ from 'lodash';
 
 import { UradService as apiService } from '../../api/serviceFactory';
-import { uradDataLake2019 } from '../../../store/lake';
 
 export default class MeasureController {
   constructor({ repositories, logger, autoMapper }) {
@@ -12,52 +11,66 @@ export default class MeasureController {
     this.autoMapper = autoMapper;
   }
 
-  async getLastYear(req, res, next) {
+  async getYearData(req, res, next) {
     try {
-      const measures = await this.repos.apiRepository.getLastYear();
+      const { year = 2019, source = 'pulse' } = req.params;
+
+      const measures = await this.repos.apiRepository.getYearData({ year, source });
       res.json({ measures });
     } catch (error) {
       next(error);
     }
   }
-
-  // eslint-disable-next-line class-methods-use-this
-  async getLastYearUrad(req, res, next) {
-    try {
-      const measures = uradDataLake2019;
-
-      res.json({ measures });
-    } catch (error) {
-      next(error);
-    }
-  }
-
 
   // eslint-disable-next-line class-methods-use-this
   async fetchUrad(req, res, next) {
     try {
-      let { month = 0 } = req.params;
+      // eslint-disable-next-line prefer-const
+      let { month = 0, sensorId = '' } = req.params;
       month = parseInt(month, 10);
 
-      const sensorId = '82000008';
+      if (month < 1 || month > 12) throw Error('Month is invalid');
+      if (!sensorId) throw Error('No sensor id');
+
+      console.log(`fetching month ${month} for sensor with id ${sensorId}`);
+
       const year = 2020;
       const diff = 1;
-      const type = 'pm25';
 
-      const lastDay = moment('2020-01-01');
+      const now = moment();
 
-      const startDay = moment(`${year - diff}-01-01`).add({ months: month });
-      const middleDay = moment(`${year - diff}-01-01`).add({ months: month + 1 });
+      const startDay = moment(`${year - diff}-01-01`).add({ months: month - 1 });
+      const middleDay = moment(`${year - diff}-01-01`).add({ months: month });
 
-      const f1 = moment.duration(lastDay.diff(startDay)).asSeconds();
-      const f2 = moment.duration(lastDay.diff(middleDay)).asSeconds();
+      const format = 'MMMM Do YYYY, h:mm:ss a';
 
-      const url = `https://data.uradmonitor.com/api/v1/devices/${sensorId}/${type}/${f1}/${f2}`;
-      console.log(`url is ${url}`);
-      const data = await apiService.get(url);
+      console.log(`start day is ${startDay.format(format)}`);
+      console.log(`middle day is ${middleDay.format(format)}`);
+
+      const f1 = parseInt(moment.duration(now.diff(startDay)).asSeconds(), 10);
+      const f2 = parseInt(moment.duration(now.diff(middleDay)).asSeconds(), 10);
+
+      const types = ['pm25'];
+      const urls = types.map(type => `https://data.uradmonitor.com/api/v1/devices/${sensorId}/${type}/${f1}/${f2}`)
+
+      console.log(`urls are ${urls}`);
+      const sensorData = await Promise.all(urls.map(url => apiService.get(url)));
+
+      console.log('fetched data');
 
       try {
-        fs.writeFileSync(`./store/lake/urad/${year - diff}/raw/${sensorId}/${sensorId}_${month + 1}_${type}.json`, JSON.stringify(data, undefined, '\t'));
+        const rootDir = `./store/lake/urad/${year - diff}/raw/${sensorId}`;
+        if (!fs.existsSync(rootDir)) {
+          fs.mkdirSync(rootDir);
+        }
+
+        for (let index = 0; index < sensorData.length; index += 1) {
+          const data = sensorData[index];
+          const type = types[index];
+          console.log(`for ${type} data is ${data.length}`);
+          fs.writeFileSync(`${rootDir}/${sensorId}_${month}_${type}.json`, JSON.stringify(data, undefined, '\t'));
+        }
+
         // file written successfully
       } catch (err) {
         console.error(err);
@@ -84,23 +97,38 @@ export default class MeasureController {
     try {
       const obj = {
         sensorIds: [
-          '82000002',
+          '820001CF',
+          // in progress
+
+          // done 2
+          // 82000007
+          // 8200000A
+          // 82000008
+          // 82000005
+          // 82000004
+          // 82000002
+          // 82000141
+          // 8200019C
+          // 820001CF
+
+          // done
+
           // '8200000A', // Sunday, June 5, 2016 4:28:15 PM - Saturday, January 25, 2020 10:09:30 AM
           // '82000008', // Sunday, June 5, 2016 4:12:42 PM - Wednesday, January 8, 2020 5:00:06 AM
           // '82000007', // Sunday, June 5, 2016 4:05:14 PM - Thursday, January 23, 2020 2:31:43 PM
           // '82000005', // Sunday, June 5, 2016 3:54:46 PM - Saturday, January 25, 2020 11:37:39 AM
           // '82000004', // Saturday, May 21, 2016 7:32:19 PM - Friday, January 24, 2020 10:34:49 AM
           // '82000002', // Sunday, June 5, 2016 3:27:42 PM - Friday, January 24, 2020 10:39:59 AM
-
+          // '8200000A', // Sunday, June 5, 2016 4:28:15 PM - Saturday, January 25, 2020 10:09:30 AM
           // '82000141', // Thursday, January 17, 2019 9:06:46 AM - Saturday, January 25, 2020 6:43:29 PM
           // '8200019C', // Monday, May 13, 2019 3:29:36 PM - Saturday, January 25, 2020 6:42:52 PM
           // '820001CF', // Tuesday, October 29, 2019 9:15:15 PM - Saturday, January 25, 2020 6:42:38 PM
-          // '160000A2', // Monday, January 6, 2020 11:20:39 PM - Saturday, January 25, 2020 6:43:25 PM
         ],
       };
 
       const months = moment.monthsShort().map((m, i) => i + 1);
-      const type = 'pm10';
+      const type = 'pm25';
+      const year = 2019;
 
       for (let i = 0; i < obj.sensorIds.length; i += 1) {
         try {
@@ -110,13 +138,28 @@ export default class MeasureController {
           const allContent = [];
           for (let k = 0; k < months.length; k += 1) {
             try {
-              const path = `./store/lake/urad/2019/raw/${sensorId}/${sensorId}_${months[k]}.json`;
+              const path = `./store/lake/urad/${year}/raw/${sensorId}/${sensorId}_${months[k]}_${type}.json`;
               console.log(`reading ${path}`);
 
-              const content = fs.readFileSync(path, 'utf8');
-              allContent.push(JSON.parse(content));
+              if (!fs.existsSync(path)) {
+                continue;
+              }
+
+              let jsonContent = [];
+              try {
+                const content = fs.readFileSync(path, 'utf8');
+                jsonContent = JSON.parse(content);
+
+                if (jsonContent.length) {
+                  console.log(`file ${path} has ${jsonContent.length}`);
+                  allContent.push(jsonContent);
+                }
+              } catch (ex) {
+                console.log(`Error in file ${path}`);
+                console.error(ex);
+              }
             } catch (ex) {
-              //console.error(ex);
+              console.error(ex);
             }
           }
 
@@ -139,7 +182,7 @@ export default class MeasureController {
             });
 
           try {
-            fs.writeFileSync(`./store/lake/urad/2019/avg/${sensorId}.json`, JSON.stringify(ordered, undefined, '\t'));
+            fs.writeFileSync(`./store/lake/urad/${year}/avg/${sensorId}_${type}.json`, JSON.stringify(ordered, undefined, '\t'));
           } catch (ex) {
             console.error(ex);
           }
@@ -156,14 +199,15 @@ export default class MeasureController {
   }
 }
 
+function roughScale(x, base = 10) {
+  const parsed = parseInt(x, base);
+  if (isNaN(parsed)) { return 0; }
+  return parsed;
+}
+
 function getAverageData(sensorId, data, type) {
   const result = [];
-
-  function roughScale(x, base = 10) {
-    const parsed = parseInt(x, base);
-    if (isNaN(parsed)) { return 0; }
-    return parsed;
-  }
+  const maxDay = 50;
 
   const groupedByYear = _.groupBy(data, item => moment(item.time * 1000).year());
 
@@ -184,16 +228,16 @@ function getAverageData(sensorId, data, type) {
         if (_.size(filteredDays) > 0) {
           result.push({
             sensorId,
-            pm10: parseFloat((sum / _.size(filteredDays)).toFixed(2)),
+            [type]: parseFloat((sum / _.size(filteredDays)).toFixed(2)),
             stamp: _.first(filteredDays).time,
-            top: _.take(_.orderBy(filteredDays, `${type}`, 'desc'), 10),
+            top: _.take(_.orderBy(filteredDays.filter(day => day[type] > maxDay), `${type}`, 'desc'), 5),
           });
         }
       });
     });
   });
 
-  return _.orderBy(result, 'pm10', 'desc');
+  return _.orderBy(result, type, 'desc');
 }
 
 function getAverageDataAsObject(sensorId, data) {
@@ -220,7 +264,6 @@ function getAverageDataAsObject(sensorId, data) {
 
   return result;
 }
-
 
 // function getQueryOptions(req) {
 //   const {
