# src/controllers/measures/measuresRouter.js
@@ -14,15 +14,11 @@ const controller = new MeasuresController({
 
 // routes
 
-router.route('/last-year')
-  .get((req, res, next) => controller.getLastYear(req, res, next));
-
-router.route('/last-year-urad')
-  .get((req, res, next) => controller.getLastYearUrad(req, res, next));
-
+router.route('/get-year')
+  .get((req, res, next) => controller.getYearData(req, res, next));
 
 router.route('/fetch-urad/:month')
-  .get((req, res, next) => controller.fetchUrad(req, res, next))
+  .get((req, res, next) => controller.fetchUrad(req, res, next));
 
 router.route('/process-urad')
   .get((req, res, next) => controller.processUrad(req, res, next));
